@@ -27,6 +27,7 @@ S3method("if_val<-",list)
 S3method("ref<-",default)
 S3method("ref<-",formula)
 S3method("|",criterion)
+S3method(add_columns,data.frame)
 S3method(add_rows,data.frame)
 S3method(add_rows,default)
 S3method(add_rows,etable)
@@ -281,6 +282,7 @@ export("ref<-")
 export("val_lab<-")
 export("var_lab<-")
 export(..)
+export(.add_columns)
 export(.add_rows)
 export(.apply_labels)
 export(.apply_val_labs)
@@ -314,6 +316,7 @@ export(.sort_desc)
 export(.val_lab)
 export(.var_lab)
 export(.where)
+export(add_columns)
 export(add_rows)
 export(add_sig_labels)
 export(add_val_lab)
