@@ -3,6 +3,8 @@
 * fix tests for systems with no long doubles support
 * new arguments and small improvements in 'write_labelled_csv'/'write_labelled_sps'
 * minor fixes
+* change behavior of 'vlookup'/'vlookup_df' - now it also matches on NA
+
 
 0.8.4 (11.12.2017)
 ================
